fix footer to prevent overlap

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -13,3 +13,7 @@
   bottom: 0;
   width: 100%;
 }
+
+body {
+  padding-top: 5.5em
+}
