--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -10,3 +10,14 @@
 .burger-menu {
   flex-grow: 0
 }
+
+.nav {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.footer {
+  position: static
+}
