--- a/src/styles/Recipes.scss
+++ b/src/styles/Recipes.scss
@@ -20,7 +20,7 @@
   overflow-y: scroll;
   display: block;
   overflow-x: hidden;
-  height: 70%
+  height: 90%
 }
 
 .recipe-columns {
